feat 刪除contect 和about 頁面連結到index.js /把col 移到自己一層

--- a/src/contect.html
+++ b/src/contect.html
@@ -36,115 +36,119 @@
             </div>
         </section>
         <section class="contect wrapper ">
-            <div class="row" style="border: 1px solid red">
-                <div class="contect_introduction col-12 col-sm-5" style="border: 1px solid white">
-                    <form action="#">
-                        <div class="pt-45">
-                            <p type="您的姓名:">
-                                <input type="text" class="contect_box" id="contect_name" name="" />
-                                <label for="name"></label>
-                            </p>
-                        </div>
-                        <div>
-                            <p type="電子郵件:">
-                                <input type="text" class="contect_box" id="contect_mmail" name="" />
-                                <label for="name"></label>
-                            </p>
-                        </div>
-                        <div>
-                            <p type="連絡電話:">
-                                <input type="text" class="contect_box" id="contect_phone" name="" />
-                                <label for="name"></label>
-                            </p>
-                        </div>
-                        <div>
-                            <p type="貴公司名稱:">
-                                <input type="text" class="contect_box" id="contect_itd" name="" />
-                                <label for="name"></label>
-                            </p>
-                        </div>
-                        <div>
-                            <p type="您的展覽類型:">
-                                <input type="text" class="contect_box" id="contect_type" name="" />
-                                <label for="name"></label>
-                            </p>
-                        </div>
-                        <div>
-                            <p type="訊息內容:">
-                                <input type="textarea" class="contect_box" id="contect_content" name="" />
-                                <label for="name"></label>
-                            </p>
-                        </div>
+            <div class="row">
+                <div class="col-12 col-sm-6">
+                    <div class="contect_introduction">
+                        <form action="#">
+                            <div class="pt-45">
+                                <p type="您的姓名:">
+                                    <input type="text" class="contect_box" id="contect_name" name="" />
+                                    <label for="name"></label>
+                                </p>
+                            </div>
+                            <div>
+                                <p type="電子郵件:">
+                                    <input type="text" class="contect_box" id="contect_mmail" name="" />
+                                    <label for="name"></label>
+                                </p>
+                            </div>
+                            <div>
+                                <p type="連絡電話:">
+                                    <input type="text" class="contect_box" id="contect_phone" name="" />
+                                    <label for="name"></label>
+                                </p>
+                            </div>
+                            <div>
+                                <p type="貴公司名稱:">
+                                    <input type="text" class="contect_box" id="contect_itd" name="" />
+                                    <label for="name"></label>
+                                </p>
+                            </div>
+                            <div>
+                                <p type="您的展覽類型:">
+                                    <input type="text" class="contect_box" id="contect_type" name="" />
+                                    <label for="name"></label>
+                                </p>
+                            </div>
+                            <div>
+                                <p type="訊息內容:">
+                                    <input type="textarea" class="contect_box" id="contect_content" name="" />
+                                    <label for="name"></label>
+                                </p>
+                            </div>
 
-                    </form>
+                        </form>
+                    </div>
                 </div>
-                <div class="contect_information col-12 col-sm-5 " style="border: 1px solid pink">
-                    <div class="contect_info">
-                        <h3>聯絡資訊</h3>
-                        <ul>
-                            <li class="contect_phone"><i class="fa-solid fa-phone"></i>
-                                <h4 class="pt-7 pl-12">02-2712-0589</h4>
-                            </li>
-                            <li class="contect_mail"><i class="fa-solid fa-envelope"></i>
-                                <h4 class="pt-7 pl-12">Tián_lám@gmail.com</h4>
-                            </li>
-                            <li class="contect_address"><i class="fa-solid fa-location-dot"></i>
-                                <h4 class="pt-7 pl-12">104506台北市中山區南京東路三段219號5樓</h4>
-                            </li>
-                        </ul>
+                <div class="col-12 col-sm-6">
+                    <div class="contect_information  ">
+                        <div class="contect_info">
+                            <h3>聯絡資訊</h3>
+                            <ul>
+                                <li class="contect_phone"><i class="fa-solid fa-phone"></i>
+                                    <h4 class="pt-7 pl-12">02-2712-0589</h4>
+                                </li>
+                                <li class="contect_mail"><i class="fa-solid fa-envelope"></i>
+                                    <h4 class="pt-7 pl-12">Tián_lám@gmail.com</h4>
+                                </li>
+                                <li class="contect_address"><i class="fa-solid fa-location-dot"></i>
+                                    <h4 class="pt-7 pl-12">104506台北市中山區南京東路三段219號5樓</h4>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="contect_map mt-20 mb-20">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57831.48527792461!2d121.50823397910158!3d25.052128000000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe6b0446815%3A0xf006dde8c27afcc7!2z57ev6IKyVGliYU1l6ZmE6Kit5Y-w5YyX6IG36KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1648541154153!5m2!1szh-TW!2stw"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                        <div class="contect_QA pb-10">
+                            <ul>
+                                <li>
+                                    <div class="contect_question">
+                                        <h4>Q1.提供甚麼服務</h4>
+
+                                        <button type="button" class="contect_btn">
+                                            <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                            <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
+                                        </button>
+                                    </div>
+                                    <div class="contect_answer pl-38 pb-16">
+                                        <h4>為您建置虛擬商展，且提供直播服務，讓您知道參展人員即時反饋，還有專屬後台方便您們管理參展資訊內容。</h4>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contect_question">
+                                        <h4>Q2.如何設置展攤</h4>
+
+                                        <button type="button" class="contect_btn">
+                                            <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                            <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
+                                        </button>
+                                    </div>
+                                    <div class="contect_answer pl-38 pb-16">
+                                        <h4>我們會依據您的預算，交由專業人員，為您客製化符合期待之展攤樣式。</h4>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="contect_question">
+                                        <h4>Q3.設置展攤費用</h4>
+
+                                        <button type="button" class="contect_btn">
+                                            <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
+                                            <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
+                                        </button>
+                                    </div>
+                                    <div class="contect_answer pl-38 pb-16">
+                                        <h4>您可透過左方表單填寫基本資料，後續將與您聯繫商討，
+                                            如有任何問題可透過聯絡資訊裡的訊息聯繫我們。</h4>
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+
                     </div>
-                    <div class="contect_map mt-20 mb-20">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57831.48527792461!2d121.50823397910158!3d25.052128000000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe6b0446815%3A0xf006dde8c27afcc7!2z57ev6IKyVGliYU1l6ZmE6Kit5Y-w5YyX6IG36KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1648541154153!5m2!1szh-TW!2stw"
-                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <div class="contect_QA pb-10">
-                        <ul>
-                            <li>
-                                <div class="contect_question">
-                                    <h4>Q1.提供甚麼服務</h4>
-
-                                    <button type="button" class="contect_btn">
-                                        <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
-                                        <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
-                                    </button>
-                                </div>
-                                <div class="contect_answer pl-38 pb-16">
-                                    <h4>為您建置虛擬商展，且提供直播服務，讓您知道參展人員即時反饋，還有專屬後台方便您們管理參展資訊內容。</h4>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="contect_question">
-                                    <h4>Q2.如何設置展攤</h4>
-
-                                    <button type="button" class="contect_btn">
-                                        <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
-                                        <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
-                                    </button>
-                                </div>
-                                <div class="contect_answer pl-38 pb-16">
-                                    <h4>我們會依據您的預算，交由專業人員，為您客製化符合期待之展攤樣式。</h4>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="contect_question">
-                                    <h4>Q3.設置展攤費用</h4>
-
-                                    <button type="button" class="contect_btn">
-                                        <span class="contect_down"><i class="fa-solid fa-chevron-down "></i></span>
-                                        <!-- <span class="contect_up"><i class="fa-solid fa-chevron-up "></i></span> -->
-                                    </button>
-                                </div>
-                                <div class="contect_answer pl-38 pb-16">
-                                    <h4>您可透過左方表單填寫基本資料，後續將與您聯繫商討，
-                                        如有任何問題可透過聯絡資訊裡的訊息聯繫我們。</h4>
-                                </div>
-                            </li>
-
-                        </ul>
-                    </div>
-
                 </div>
             </div>
         </section>
@@ -157,7 +161,6 @@
     <!-- 先連結main再連結各自設的js -->
     <script src="js/main.min.js"></script>
     <script src="js/login.min.js"></script>
-    <script src="js/index.min.js"></script>
     <script src="js/contect.min.js"></script>
     <script>
 
