feat修改_other.scss 還有 info.html 另外companyback.html

--- a/src/companyback_info.html
+++ b/src/companyback_info.html
@@ -27,11 +27,14 @@
   <!-- content，各自頁面的html寫在這邊以下都是範例 大區塊外面包section  -->
   <main>
     <section class="wrapper">
+      <section class="wrapper company_wrapper">
+        <div class="company_title">
+          <a class="title_skill">技術展示區</a>
+        </div>
+      </section>
+      <section>
 
-    </section>
-    <section>
-
-    </section>
+      </section>
   </main>
   <!-- footer -->
   <footer>
