feat 新增contect和about當頁的wrapper

--- a/src/about.html
+++ b/src/about.html
@@ -34,13 +34,13 @@
   <main >
     <section class="about_banner">
       <img src="img/about/about_banner.png">
-      <div class="about_slogan">
-        <h2>---------- 2022 最新科技展 ----------</h2>
+      <div class="about_slogan pd-10">
+        <h2>--------- 2022 最新科技展 ---------</h2>
         <h1>新智慧、新科技、新創意</h1>
         <h2>2022.04.01 - 2022.06.30</h2>
       </div>
     </section>
-    <section class="wrapper about_brief ">
+    <section class="wrapper about_brief wrapper_about">
       <div class="mb-10 about_title">會議簡介</div>
       <h3>疫情翻轉新常態．加速智慧轉型~~~~<br>
         新冠肺炎疫情自2020年爆發以來，徹底翻轉人類生活、工作與娛樂型態。遠距、零接觸成為「新常態」，促使國家、企業乃至個人，都要展開「智慧轉型」，以迎向後疫情時代，並緊緊握住復甦商機。在疫情期間展現優異的經濟韌性。疫情過後，全球更應該積極推動經濟轉型，邁入新形態市場，要強化數位轉型，更要提升民眾數位化能力。
@@ -48,7 +48,7 @@
     </section>
     <section class="about_agenda ">
       <!-- <img src="img/about/abou_middleimg.png"> -->
-      <div class="about_schedule wrapper">
+      <div class="about_schedule wrapper wrapper_about">
         <div class="about_scheduleText">
           <div class="mb-10 about_title">大會議程</div>
           <ul>
@@ -88,10 +88,10 @@
         </div>
       </div>
     </section>
-    <section class="wrapper about_lecturer">
+    <section class="wrapper about_lecturer wrapper_about">
       <div class="mb-10 about_title">講師介紹</div>
       <div class="about_speakers">
-        <div class="about_speaker">
+        <div class="about_speaker mt-20">
           <img class="mt-35" src="img/about/speaker1.png">
           <h3 class="mt-18">郭水義</h3>
           <h4 class="mt-8">中華電信總經理</h4>
@@ -107,7 +107,7 @@
             </h4>
           </div>
         </div>
-        <div class="about_speaker">
+        <div class="about_speaker mt-20">
           <img class="mt-35" src="img/about/speaker2.png">
           <h3 class="mt-18">張忠謀</h3>
           <h4 class="mt-8">台積電創辦人</h4>
@@ -122,7 +122,7 @@
             </h4>
           </div>
         </div>
-        <div class="about_speaker">
+        <div class="about_speaker mt-20">
           <img class="mt-35" src="img/about/speaker3.png">
           <h3 class="mt-18">唐鳳</h3>
           <h4 class="mt-8">現職:行政院政務委員</h4>
@@ -142,7 +142,7 @@
       </div>
     </section>
     <section class="about_exhibitor">
-      <div class="mb-10 wrapper about_title">參與廠商</div>
+      <div class="mb-10 wrapper about_title wrapper_about">參與廠商</div>
       <!-- Swiper -->
     <div class="swiper mySwiper about_mySwiper">
       <div class="swiper-wrapper">
