--- a/src/contect.html
+++ b/src/contect.html
@@ -29,13 +29,13 @@
     </header>
     <!-- content，各自頁面的html寫在這邊以下都是範例 -->
     <main>
-        <section class="wrapper">
+        <section class="wrapper contect_wrapper">
             <div class="contect_slogan">
                 <h2>Attend Exhibition</h2>
                 <h2>策展這件事，就是聚策展的事</h2>
             </div>
         </section>
-        <section class="contect wrapper ">
+        <section class="wrapper contect_wrapper ">
             <div class="row">
                 <div class="col-12 col-sm-6">
                     <div class="contect_introduction">
