feat 新增about 輪播斷點, 更改rwd字體大小

--- a/src/about.html
+++ b/src/about.html
@@ -35,8 +35,9 @@
     <section class="about_banner">
       <img src="img/about/about_banner.png">
       <div class="about_slogan pd-10">
-        <h2>--------- 2022 最新科技展 ---------</h2>
-        <h1>新智慧、新科技、新創意</h1>
+        <h2 class="about_subtitle">--------- 2022 最新科技展 ---------</h2>
+        <div class="about_rwd_title">2022 最新科技展</div>
+        <h1 >新智慧、新科技、新創意</h1>
         <h2>2022.04.01 - 2022.06.30</h2>
       </div>
     </section>
