feat:新增留言板收合功能

--- a/src/extend.html
+++ b/src/extend.html
@@ -32,7 +32,7 @@
     <section class="extend_main">
       <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff" class="swiper mySwiper2 wrapper">
         <div thumbsSlider="" class="swiper mySwiper extend_head">
-          <div class="swiper-wrapper">
+          <div class= "swiper-wrapper">
             <div class="swiper-slide">
               <img src="img/sample/Logo1.png" />
             </div>
@@ -85,11 +85,11 @@
                 <i class="fa-solid fa-comment-dots extend_chat"></i>
               </a>
               <!-- chatbox彈窗 -->
-              <article class="extend_chatbox -border_maincolor">
+              <article class="extend_chatbox -border_maincolor -hide">
                 <div class="chat_title mall-10 pall-10">
                   <h3><i class="fa-solid fa-address-card main-color"></i>
                   廠商名稱</h3>
-                  <i class="fa-regular fa-circle-xmark main-color"></i>
+                  <span class="chatbox_close"><i class="fa-regular fa-circle-xmark main-color"></i></span>
                 </div>
                 <div class="chated">
                 <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">你今天過得好嗎?<span>Today, 2:01pm</span></p>
