feat 修改contect 表單必填欄位" * " 題目改用span標籤包

--- a/src/contect.html
+++ b/src/contect.html
@@ -40,42 +40,27 @@
                 <div class="col-12 col-sm-6">
                     <div class="contect_introduction">
                         <form action="#">
-                            <div class="pt-45">
-                                <p type="您的姓名:">
-                                    <input type="text" class="contect_box" id="contect_name" name="" />
-                                    <label for="name"></label>
-                                </p>
+                            <div class="pt-30">
+                                <span class="contect_mark">您的姓名:</span>
+                                <input type="text" class="contect_box" id="contect_name" name="" />
+                                <label for="name"></label>
                             </div>
-                            <div>
-                                <p type="電子郵件:">
-                                    <input type="text" class="contect_box" id="contect_mmail" name="" />
-                                    <label for="name"></label>
-                                </p>
-                            </div>
-                            <div>
-                                <p type="連絡電話:">
-                                    <input type="text" class="contect_box" id="contect_phone" name="" />
-                                    <label for="name"></label>
-                                </p>
-                            </div>
-                            <div>
-                                <p type="貴公司名稱:">
-                                    <input type="text" class="contect_box" id="contect_itd" name="" />
-                                    <label for="name"></label>
-                                </p>
-                            </div>
-                            <div>
-                                <p type="您的展覽類型:">
-                                    <input type="text" class="contect_box" id="contect_type" name="" />
-                                    <label for="name"></label>
-                                </p>
-                            </div>
-                            <div>
-                                <p type="訊息內容:">
-                                    <input type="textarea" class="contect_box" id="contect_content" name="" />
-                                    <label for="name"></label>
-                                </p>
-                            </div>
+                            <span class="contect_mark">電子郵件:</span>
+                            <input type="text" class="contect_box" id="contect_mmail" name="" />
+                            <label for="name"></label>
+                            <span class="contect_mark">連絡電話:</span>
+                            <input type="text" class="contect_box" id="contect_phone" name="" />
+                            <label for="name"></label>
+                            <span>貴公司名稱:</span>
+                            <input type="text" class="contect_box" id="contect_itd" name="" />
+                            <label for="name"></label>
+                            <span>您的展覽類型:</span>
+                            <input type="text" class="contect_box" id="contect_type" name="" />
+                            <label for="name"></label>
+                            <span>訊息內容:</span>
+                            <input type="textarea" class="contect_box" id="contect_content" name="" />
+                            <label for="name"></label>
+
 
                         </form>
                     </div>
