fix:修改虛擬商展英文單字的斷行問題及左右箭頭距離

--- a/src/extend.html
+++ b/src/extend.html
@@ -92,9 +92,9 @@
                   <span class="chatbox_close"><i class="fa-regular fa-circle-xmark main-color"></i></span>
                 </div>
                 <div class="chated">
-                <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">你今天過得好嗎?<span>Today, 2:01pm</span></p>
-                <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">我過得很好喔<span>Today, 2:01pm</span></p>
-                <p class="chat_content chat_content_me pall-5 mall-10 mt-30 mr-30">對啊團專<span>Today, 2:01pm</span></p>
+                <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">你今天過得好嗎?<span>3/30, 2:01pm</span></p>
+                <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">我過得很好喔<span>3/30, 2:01pm</span></p>
+                <p class="chat_content chat_content_me pall-5 mall-10 mt-30 mr-30">對啊團專<span>3/30, 2:01pm</span></p>
                 <p class="chat_content chat_content_me pall-5 mall-10 mt-30 mr-30">哭啊大家的動作也太快了吧<span>Today, 2:01pm</span></p>
                 <p class="chat_content chat_content_you pall-5 mall-10 mt-30 ml-30">所以你要振作一點阿<span>Today, 2:01pm</span></p>
                 </div>
