--- a/src/contect.html
+++ b/src/contect.html
@@ -40,26 +40,19 @@
                 <div class="col-12 col-sm-6">
                     <div class="contect_introduction">
                         <form action="#">
-                            <div class="pt-30">
-                                <span class="contect_mark">您的姓名:</span>
+                                <label for="contect_name"><span class="contect_mark contect_name">您的姓名:</span></label>
                                 <input type="text" class="contect_box" id="contect_name" name="" />
-                                <label for="name"></label>
-                            </div>
-                            <span class="contect_mark">電子郵件:</span>
-                            <input type="text" class="contect_box" id="contect_mmail" name="" />
-                            <label for="name"></label>
-                            <span class="contect_mark">連絡電話:</span>
+                            <label for="contect_mail"><span class="contect_mark">電子郵件:</span></label>
+                            <input type="text" class="contect_box" id="contect_mail" name="" />
+                            <label for="contect_phone"><span class="contect_mark">連絡電話:</span></label>
                             <input type="text" class="contect_box" id="contect_phone" name="" />
-                            <label for="name"></label>
-                            <span>貴公司名稱:</span>
+                            <label for="contect_itd"><span>貴公司名稱:</span></label>
                             <input type="text" class="contect_box" id="contect_itd" name="" />
-                            <label for="name"></label>
-                            <span>您的展覽類型:</span>
+                            <label for="contect_type"><span>您的展覽類型:</span></label>
                             <input type="text" class="contect_box" id="contect_type" name="" />
-                            <label for="name"></label>
-                            <span>訊息內容:</span>
-                            <input type="textarea" class="contect_box" id="contect_content" name="" />
-                            <label for="name"></label>
+                            <label for="contect_message"><span class="contect_mark">訊息內容:</span></label>
+                            <textarea cols="20" rows="5" class="contect_box contect_message"  id="contect_message" name=""></textarea>
+                            <input type="submit" class="btn-long mt-15" value="送出資料">
 
 
                         </form>
@@ -82,7 +75,7 @@
                             </ul>
                         </div>
                         <div class="contect_map mt-20 mb-20">
-                            <iframe
+                            <iframe 
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57831.48527792461!2d121.50823397910158!3d25.052128000000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442abe6b0446815%3A0xf006dde8c27afcc7!2z57ev6IKyVGliYU1l6ZmE6Kit5Y-w5YyX6IG36KiT5Lit5b-D!5e0!3m2!1szh-TW!2stw!4v1648541154153!5m2!1szh-TW!2stw"
                                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
